workloads/data-platform/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: data-storage
  labels:
    app.kubernetes.io/name: minio
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: minio
  ports:
    - name: s3
      port: 9000
      targetPort: s3
    - name: console
      port: 9001
      targetPort: console
